fix lnhpd title

--- a/openapi-defs/LNHPD-en.yaml
+++ b/openapi-defs/LNHPD-en.yaml
@@ -10,8 +10,8 @@ x-api-store-plans:
     name: Internal Plan
     description: The Internal Plan is for internal government use only.
 info:
-  title: Canadian Nutrient File (CNF)
-  description: The Canadian Nutrient File (CNF) is the standard reference food composition database reporting the amount of nutrients in foods commonly consumed in Canada.
+  title: Licensed Natural Health Products Database (LNHPD)
+  description: The Licensed Natural Health Products Database (LNHPD) contains information about natural health products (NHPs) that have been issued a product licence by Health Canada.
   version: '0.1'
 
 schemes:
