fix host to 3scale endpoint

--- a/openapi-defs/CTA-en.yaml
+++ b/openapi-defs/CTA-en.yaml
@@ -18,7 +18,7 @@ info:
 
 schemes:
   - https
-host: health-products.canada.ca
+host: cta-hc-sc-apicast-staging.dev.api.canada.ca
 basePath: /api/clinical-trial/
 produces:
   - application/json
