--- a/openapi-defs/CVP-en.yaml
+++ b/openapi-defs/CVP-en.yaml
@@ -16,7 +16,7 @@ info:
 
 schemes:
   - https
-host: health-products.canada.ca
+host: cvp-hc-sc-apicast-staging.dev.api.canada.ca
 basePath: /api/drug/
 produces:
   - application/json
