--- a/openapi-defs/DPD-en.yaml
+++ b/openapi-defs/DPD-en.yaml
@@ -21,7 +21,7 @@ info:
 
 schemes:
   - https
-host: health-products.canada.ca
+host: dpd-hc-sc-apicast-staging.dev.api.canada.ca
 basePath: /api/drug/
 produces:
   - application/json
