--- a/openapi-defs/NOC-en.yaml
+++ b/openapi-defs/NOC-en.yaml
@@ -19,7 +19,7 @@ info:
 
 schemes:
   - https
-host: health-products.canada.ca
+host: noc-hc-sc-apicast-staging.dev.api.canada.ca
 basePath: /api/drug/
 produces:
   - application/json
