--- a/openapi-defs/SR-en.yaml
+++ b/openapi-defs/SR-en.yaml
@@ -16,7 +16,7 @@ info:
 
 schemes:
   - https
-host: health-products.canada.ca
+host: summary-report-hc-sc-apicast-staging.dev.api.canada.ca
 basePath: /api/summary-report/api/
 produces:
   - application/json
