host fix for SR

--- a/openapi-defs/MDALL-en.yaml
+++ b/openapi-defs/MDALL-en.yaml
@@ -24,7 +24,7 @@ info:
 
 schemes:
   - https
-host: host: mdall-hc-sc-apicast-staging.dev.api.canada.ca
+host: mdall-hc-sc-apicast-staging.dev.api.canada.ca
 basePath: /api/medical-devices/
 produces:
   - application/json
