--- a/openapi-defs/hres/CVP-en.yaml
+++ b/openapi-defs/hres/CVP-en.yaml
@@ -13,8 +13,8 @@ info:
 
 schemes:
   - https
-host: cvp-hc-sc-apicast-staging.beta.api.canada.ca
-basePath: /api/canada-vigilance/
+host: health-products.canada.ca
+basePath: /api/canada-vigilance
 produces:
   - application/json
   - application/xml
