dpd french docs

--- a/openapi-defs/api_store/CVP-fr.yaml
+++ b/openapi-defs/api_store/CVP-fr.yaml
@@ -343,7 +343,7 @@ definitions:
 
   DrugProductIngredient:
     type: object
-    description: Provides the information about the active ingredients associated with all drugs.
+    description: Fournit des renseignements sur les ingrédients actifs de tous les médicaments.
     properties:
       drug_product_ingredient_id:
         type: string
@@ -365,7 +365,7 @@ definitions:
 
   DrugProduct:
     type: object
-    description: Provides the information about all drug names and their codes.
+    description: Fournit le nom de tous les médicaments et leurs codes.
     properties:
       drug_product_id:
         type: string
@@ -378,7 +378,7 @@ definitions:
 
   Gender:
     type: object
-    description: Provides the information about the gender presentation text associated with the gender code.
+    description: Fournit des renseignements sur le sexe, accompagnés du code du sexe.
     properties:
       gender_id:
         type: string
@@ -394,7 +394,7 @@ definitions:
 
   Outcome:
     type: object
-    description: Provides the information about the outcome presentation text associated with the outcome code.
+    description: Fournit des renseignements sur le résultat, accompagnés du code du résultat.
     properties:
       outcome_id:
         type: string
@@ -410,7 +410,7 @@ definitions:
 
   Reaction:
     type: object
-    description: Provides the information about the reaction terms associated with the report.
+    description: Fournit des renseignements au sujet des réactions associées aux déclarations.
     properties:
       reaction_id:
         type: string
@@ -438,7 +438,7 @@ definitions:
 
   ReportDrug:
     type: object
-    description: Provides the information about the drug report.
+    description: Fournit des renseignements sur les médicaments associés aux déclarations.
     properties:
       report_drug_id:
         type: string
@@ -493,7 +493,7 @@ definitions:
 
   ReportLink:
     type: object
-    description: Provides the information about the linked/duplicate reports presentation text associated with the code.
+    description: Fournit des renseignements sur les déclarations liées ou en double, accompagnés du code des déclarations.
     properties:
       report_link_id:
         type: string
@@ -512,7 +512,7 @@ definitions:
 
   ReportType:
     type: object
-    description: Provides the information about the report type presentation text associated with the report type code.
+    description: Fournit des renseignements sur le type de déclaration, accompagnés du code du type de déclaration.
     properties:
       report_type_id:
         type: string
@@ -528,7 +528,7 @@ definitions:
 
   Report:
     type: object
-    description: Provides the information about reports and patients.
+    description: Fournit des renseignements au sujet des déclarations et des patients.
     properties:
       report_id:
         type: string
@@ -644,7 +644,7 @@ definitions:
 
   Seriousness:
     type: object
-    description: Provides the information about the report seriousness presentation text associated with the report seriousness code.
+    description: Fournit des renseignements sur la gravité de la réaction, accompagnés du code de gravité.
     properties:
       seriousness_id:
         type: string
@@ -660,7 +660,7 @@ definitions:
 
   Source:
     type: object
-    description: Provides the information about the report source presentation text associated with the report source code.
+    description: Fournit des renseignements sur la source de déclaration, accompagnés du code de la source.
     properties:
       source_id:
         type: string
